--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <nav style="margin-top: 15px;">
             <a href="index.html">[Home]</a>
             <a href="patologia.html">[Patologia]</a>
+            <a href="embriologia.html">[Embriologia]</a>
             <a href="equipe.html">[Conheça a Equipe]</a>
         </nav>
     </header>
@@ -95,10 +96,5 @@
     </footer>
 </body>
 </html>
-
-
-
-
-
 
 
