Atualiza páginas embriologia e patologia

--- a/embriologia.html
+++ b/embriologia.html
@@ -63,7 +63,7 @@
         
         <div class="topico-embriologia">
             <h3>Introdução à Embriologia</h3>
-            <p>Os conceitos essenciais para começar seus estudos</p>
+            <p>Os conceitos essenciais para começar seus estudos.</p>
         </div>
 
         <div class="topico-embriologia">
