--- a/patologia.html
+++ b/patologia.html
@@ -63,7 +63,7 @@
         
         <div class="topico-patologia">
             <h3>Introdução à Patologia</h3>
-            <p>Os conceitos essenciais para começar seus estudos</p>
+            <p>Os conceitos essenciais para começar seus estudos.</p>
         </div>
 
         <div class="topico-patologia">
@@ -73,7 +73,7 @@
 
         <div class="topico-patologia">
             <h3>Patologia Específica</h3>
-            <p>A patologia de cada sistema do organismo humano<p>
+            <p>A patologia de cada sistema do organismo humano.<p>
         </div>
         
     </main>
