Corrigida tag strong não fechada na lista e atualizadas demais páginas

--- a/embriologia.html
+++ b/embriologia.html
@@ -68,7 +68,7 @@
 
         <div class="topico-embriologia">
             <h3>Período Pré Embrionário</h3>
-            <p>As três primeiras semanas do desenvolvimento</p>
+            <p>As três primeiras semanas do desenvolvimento.</p>
         </div>
 
         <div class="topico-embriologia">
