--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <h2>Recursos Principais</h2>
             
             <ul style="list-style-type: disc; padding-left: 20px;">
-                <li>Patologia Geral e de Especialidades explicadas de modo detalhado.</li>
-                <li>Histologia com ênfase na parte aplicada.</li>
-                <li>Embriologia e seus conceitos essenciais.</li>
+                <li><strong>Patologia</strong> Geral e de Especialidades explicadas de modo detalhado.</li>
+                <li><strong>Histologia</strong> com ênfase na aplicação prática.</li>
+                <li>O essencial em <strong>Embriologia</strong> para a compreensão do normal e do patológico.</li>
             </ul>
             
             <a href="#" class="botao" style="background-color: #FF69B4; color: white; text-decoration: none; padding: 12px 25px; border-radius: 5px; font-weight: bold; display: inline-block; margin-top: 15px;">Ver no GitHub</a>
