--- a/patologia.html
+++ b/patologia.html
@@ -68,12 +68,12 @@
 
         <div class="topico-patologia">
             <h3>Patologia Geral</h3>
-            <p>Os mecanismos básicos das doenças, necessários para a compreensão dos processos patológicos.</p>
+            <p>Os mecanismos básicos necessários para a compreensão dos processos das doenças.</p>
         </div>
 
         <div class="topico-patologia">
             <h3>Patologia Específica</h3>
-            <p>A patologia de cada sistema do organismo humano.<p>
+            <p>Os processos patológicos de cada sistema do organismo humano.<p>
         </div>
         
     </main>
